apps/base/media/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
  labels:
    app: jellyseerr
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/part-of: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
        app.kubernetes.io/name: jellyseerr
        app.kubernetes.io/part-of: media-stack
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/part-of
                      operator: In
                      values:
                        - media-stack
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/hostname: talos-cz9-9tb
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:2.7.3
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
